// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for multi-ALM binding: editing a definition 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for multi-ALM binding: loaded 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for multi-ALM binding: loading ALM definitions 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={true}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for multi-ALM binding: loading project count 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={true}
        >
          <Button
            data-test="settings__alm-create"
            disabled={true}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for single-ALM binding 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={true}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={true}
        >
          <Button
            data-test="settings__alm-create"
            disabled={true}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for single-ALM binding 2`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={true}
        >
          <Button
            data-test="settings__alm-create"
            disabled={true}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly for single-ALM binding 3`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={true}
        >
          <Button
            data-test="settings__alm-create"
            disabled={true}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "key": "key",
            "personalAccessToken": "asdf1234",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly with validation: create a first 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <p
        className="spacer-top"
      >
        settings.almintegration.empty.azure
      </p>
      <div
        className="big-spacer-top"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly with validation: create a second 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly with validation: default 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="azure"
        branchesEnabled={true}
        definition={
          Object {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly with validation: empty 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <p
        className="spacer-top"
      >
        settings.almintegration.empty.azure
      </p>
      <div
        className="big-spacer-top"
      >
        <withAppStateContext(CreationTooltip)
          alm="azure"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="azure"
    />
  </div>
</div>
`;

exports[`should render correctly with validation: pass the correct key for bitbucket cloud 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="spacer-bottom text-right"
      >
        <withAppStateContext(CreationTooltip)
          alm="bitbucket"
          preventCreation={false}
        >
          <Button
            data-test="settings__alm-create"
            disabled={false}
            onClick={[MockFunction]}
          >
            settings.almintegration.create
          </Button>
        </withAppStateContext(CreationTooltip)>
      </div>
      <AlmBindingDefinitionBox
        alm="bitbucketcloud"
        branchesEnabled={true}
        definition={
          Object {
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "workspace": "workspace",
          }
        }
        key="key"
        multipleDefinitions={false}
        onCheck={[MockFunction]}
        onDelete={[MockFunction]}
        onEdit={[MockFunction]}
      />
    </DeferredSpinner>
  </div>
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <CategoryDefinitionsList
      category="almintegration"
      definitions={Array []}
      subCategory="bitbucket"
    />
  </div>
</div>
`;
